--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,8 +2,8 @@ cmake_minimum_required(VERSION 3.16)
 
 project(sleeper VERSION 0.0.1)
 
-list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}")
-include(snippets)
+#list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}")
+#include(snippets)
 
 file(WRITE ${PROJECT_BINARY_DIR}/sleeperconfig.hpp.in "
 #pragma once
