--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,3 +1,7 @@
+cmake_minimum_required(VERSION 3.16)
+
+project(sleeper LANGUAGES CXX)
+
 add_executable(sleeperunittests sleepertests.cpp)
 
 target_include_directories(sleeperunittests PUBLIC ${CMAKE_SOURCE_DIR}/src ${googletest_SOURCE_DIR})
@@ -5,9 +9,8 @@ target_include_directories(sleeperunittests PUBLIC ${CMAKE_SOURCE_DIR}/src ${goo
 target_link_libraries(sleeperunittests
   PRIVATE
   sleeper::sleeper
-  gtest_main
+  GTest::gtest_main
 )
 
 include(GoogleTest)
 gtest_discover_tests(sleeperunittests)
-
